src/test/ui/str-lit-type-mismatch.rs
// Copyright 2016 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.


fn main() {
    let x: &[u8] = "foo"; //~ ERROR mismatched types
    let y: &[u8; 4] = "baaa"; //~ ERROR mismatched types
    let z: &str = b"foo"; //~ ERROR mismatched types
}
